Вроде как работает getImages и getTasks. Но getTasks отрисовывает сразу весь массив

--- a/05/index.html
+++ b/05/index.html
@@ -22,8 +22,12 @@
     <h1>Welcome to Mobile Friendly Page</h1>
     <p>This page is styled for better readability on mobile devices.</p>
 
-    <button id="click-me">click-me</button>
+    <button id="click-me">Get images</button>
+    <button id="get-tasks">Get tasks</button>
     <input type="number" value="" id="input">
+
+    <div id="tasks-result"></div>
+    <div id="content"></div>
 </div>
 
 <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
