I swapped the scripts connection in index.html and createTask stopped being undefined

--- a/05/index.html
+++ b/05/index.html
@@ -26,12 +26,13 @@
     <button id="get-tasks">Get tasks</button>
     <input type="number" value="" id="input">
 
-    <div id="tasks-result"></div>
+    <ul id="tasks-result"></ul>
     <div id="content"></div>
 </div>
 
 <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
-<script src="./script.js"></script>
 <script src="./service.js"></script>
+<script src="./script.js"></script>
+
 </body>
 </html>
