--- a/07/index.html
+++ b/07/index.html
@@ -24,7 +24,8 @@
 
     <button id="click-me">Get images</button>
     <button id="get-tasks">Get tasks</button>
-    <input type="number" value="" id="input">
+    <button id="create-tasks">Create tasks</button>
+    <input value="" id="input">
 
     <ul id="tasks-result"></ul>
     <div id="content"></div>
