I watched lesson 8 to the end.

--- a/07/index.html
+++ b/07/index.html
@@ -25,6 +25,7 @@
     <button id="click-me">Get images</button>
     <button id="get-tasks">Get tasks</button>
     <button id="create-tasks">Create tasks</button>
+    <button id="delete-tasks">Delete tasks</button>
     <input value="" id="input">
 
     <ul id="tasks-result"></ul>
