So let's say I made a PUT request

--- a/07/index.html
+++ b/07/index.html
@@ -26,6 +26,7 @@
     <button id="get-tasks">Get tasks</button>
     <button id="create-tasks">Create tasks</button>
     <button id="delete-tasks">Delete tasks</button>
+    <button id="update-tasks">Update tasks</button>
     <input value="" id="input">
 
     <ul id="tasks-result"></ul>
